# agent-console-dashboard

./: .gitignore  .markdownlint.json  .markdownlintignore  .pre-commit-config.yaml  .prettierrc.json  AGENTS.md  Cargo.toml  README.md  markdown-lint-config-justification.md
.beads/: issues.jsonl
.beads/backup/: backup_state.json  events.jsonl  issues.jsonl
.beads/export-state/: 9816b161458f7119.json
.cargo-husky/hooks/: pre-commit
.claude/: compact-instruction.txt  session-context.md  settings.json
.claude/agents/: build-tooling.md  cli-features.md  daemon-core.md  debug-infra.md  docs-api.md  docs-design.md  hook-ipc.md  hook-research.md  mock-testing.md  test-writer.md  tui-rendering.md  tui-visual.md
.claude/rules/: orchestration.md
.git-ignored/: dispatch-plan-v3.md  pending-user-scope-changes.md  stdin-and-file-descriptors.md
.git-ignored/agentic-engineering/: orchestration-rules.md
.github/workflows/: ci.yml
bmad/: config.yaml
crates/agent-console-dashboard/: Cargo.toml  build.rs
crates/agent-console-dashboard/src/: health.rs  ipc.rs  lib.rs  main.rs  service.rs
crates/agent-console-dashboard/src/cli_tests/: cli.rs  hook.rs  install.rs
crates/agent-console-dashboard/src/client/: connection.rs  mod.rs
crates/agent-console-dashboard/src/client/connection/: mod.rs  tests.rs
crates/agent-console-dashboard/src/commands/: daemon.rs  hook.rs  install.rs  ipc.rs  mod.rs
crates/agent-console-dashboard/src/config/: default.rs  error.rs  loader.rs  mod.rs  schema.rs  xdg.rs
crates/agent-console-dashboard/src/daemon/: handlers.rs  hooks.rs  logging.rs  mod.rs  server.rs  session.rs  store.rs  usage.rs
crates/agent-console-dashboard/src/daemon/handlers/: mod.rs  tests.rs
crates/agent-console-dashboard/src/daemon/store/: closed.rs  lifecycle.rs  mod.rs
crates/agent-console-dashboard/src/daemon/store/tests/: basic.rs  closed.rs  concurrent.rs  inactive.rs  lifecycle_close.rs  lifecycle_create.rs  lifecycle_get_or_create.rs  lifecycle_reopen.rs  lifecycle_update.rs  mod.rs  stale.rs  subscriber.rs
crates/agent-console-dashboard/src/integrations/: zellij.rs
crates/agent-console-dashboard/src/layout/: mod.rs  presets.rs
crates/agent-console-dashboard/src/terminal/: environment.rs  executor.rs  mod.rs
crates/agent-console-dashboard/src/tests/: cli.rs  health.rs  ipc.rs  mod.rs  serialization.rs  session.rs  status.rs
crates/agent-console-dashboard/src/tui/: app.rs  event.rs  mod.rs  subscription.rs  test_utils.rs  ui.rs
crates/agent-console-dashboard/src/tui/app/: mod.rs  update.rs
crates/agent-console-dashboard/src/tui/app/tests/: basic.rs  interaction.rs  mod.rs
crates/agent-console-dashboard/src/tui/event/: mod.rs  tests.rs
crates/agent-console-dashboard/src/tui/views/: dashboard.rs  detail.rs  mod.rs
crates/agent-console-dashboard/src/tui/views/dashboard/: mod.rs
crates/agent-console-dashboard/src/tui/views/dashboard/tests/: buffer.rs  disambiguation.rs  mod.rs  rendering.rs  stories.rs  unit.rs
crates/agent-console-dashboard/src/tui/views/detail/: mod.rs
crates/agent-console-dashboard/src/tui/views/detail/tests/: mod.rs  rendering.rs  unit.rs
crates/agent-console-dashboard/src/widgets/: api_usage.rs  context.rs  mod.rs  session_status.rs  working_dir.rs
crates/agent-console-dashboard/tests/: claude_hook.rs  socket_server_integration.rs
crates/agent-console-dashboard/tests/socket_server/: cleanup.rs  concurrent.rs  connection.rs  disconnect.rs  lifecycle.rs  message.rs  mod.rs  notification.rs
crates/claude-hooks/: Cargo.toml  README.md
crates/claude-hooks/docs/: DEVLOG.md  PRD.md  architecture.md  design-draft.md
crates/claude-hooks/src/: error.rs  integration_tests.rs  lib.rs  registry.rs  settings.rs  types.rs
crates/claude-hooks/src/settings/: mod.rs  tests.rs
crates/claude-hooks/tests/: atomic_safety.rs  edge_cases.rs  integration_tests.rs  performance.rs
crates/claude-usage/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  build.rs
crates/claude-usage/examples/: fetch_usage.rs
crates/claude-usage/npm/: .npmignore  index.d.ts  index.js  package.json
crates/claude-usage/src/: client.rs  error.rs  lib.rs  napi.rs  types.rs
crates/claude-usage/src/credentials/: linux.rs  macos.rs  mod.rs
docs/: DEVLOG.md  configuration.md  dependency-graph.md  end-to-end-blockers.md  index.md  macos-keychain-acl.md  project-status.md  sub-agent-lifecycle.md  terminology.md
docs/architecture/: 2026-01-31-decision-amendments.md  2026-01-31-discussion-decisions.md  concurrency.md  error-handling.md  hooks.md  widget-data-flow.md
docs/archive/: devlog.md
docs/audits/: 2026-01-30-bmad-story-validation.md  2026-01-31-story-alignment-concerns.md
docs/decisions/: INDEX.md  activation-gestures.md  auto-stop.md  backend-architecture.md  backup-naming.md  click-detection.md  complexity-review.md  concurrency-model.md  config-and-reload.md  credential-storage.md  deferred.md  detail-panel-layout.md  error-propagation.md  history-display-format.md  hook-contract.md  hook-field-type.md  hook-installation.md  hook-stdin-data.md  idle-auto-stop.md  implementation-defaults.md  ipc-protocol.md  keychain-access-method.md  post-merge-hook.md  pre-commit-hooks.md  resurrect-to-reopen.md  retry-and-connection.md  session-identification.md  session-lifecycle.md  session-sorting.md  session-update-command.md  shell-execution.md  socket-and-cleanup.md  status-symbols.md  task-runner-choice.md  testing-strategy.md  variable-naming.md  version-display.md  widget-data-source.md  workspace-structure.md  xdg-directory-selection.md
docs/design/: integrations.md  ui.md  vision.md
planning-artifacts/: sprint-status.yaml  workflow-status.yaml
resources/: acd.service  com.agent-console-dashboard.daemon.plist  com.agent-console.daemon.plist
scripts/: README.md  build.sh  doc.sh  e2e-test.sh  fix-markdown-files.sh  fmt.sh  install.sh  lint.sh  post-merge.sh  pre-commit-markdown.sh  pre-commit.sh  pre-push.sh  smoke-test.sh  test.sh
src/: lib.rs  main.rs
tests/: client_auto_start.rs  socket_server_integration.rs
(+252 files in other folders)
