[package]
name = "agent-console"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Agent Console Dashboard daemon"

[workspace]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "signal", "macros", "sync"] }
fork = "0.6"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
