[package]
name = "agent-console"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Agent Console Dashboard daemon"

[workspace]

[features]
# Feature flags for integration tests that depend on unimplemented components
socket_server = []
client_integration_tests = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "signal", "macros", "sync", "net", "time", "io-util"] }
fork = "0.6"
tracing = "0.1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
tempfile = "3"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true
