[workspace]
members = ["crates/agent-console-dashboard", "crates/claude-usage", "crates/claude-hooks"]
resolver = "2"

[workspace.dependencies]
# Shared dependencies can be defined here

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
strip = true

[workspace.metadata.husky]
# cargo-husky configuration preserved for git hooks
