[package]
name = "agent-console"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Agent Console Dashboard daemon"

[lib]
name = "agent_console"
path = "src/lib.rs"

[[bin]]
name = "acd"
path = "src/main.rs"

[features]
# Feature flags for integration tests that depend on unimplemented components
socket_server = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "signal", "macros", "sync", "net", "time", "io-util"] }
fork = "0.6"
tracing = "0.1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
