[package]
name = "claude-usage"
version = "0.1.0"
edition = "2021"
description = "Fetch Claude API usage data from Anthropic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PabloLION/agent-console-dashboard"
keywords = ["claude", "anthropic", "usage", "api"]
categories = ["api-bindings"]

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2"

[dev-dependencies]
tempfile = "3"
