[package]
name = "claude-usage"
version = "0.2.2"
edition = "2021"
rust-version = "1.77"
authors = ["Pablo LION <pablo.lion.music@gmail.com>"]
description = "Fetch Claude API usage data from Anthropic"
license = "MIT OR Apache-2.0"
repository = "https://github.com/PabloLION/agent-console-dashboard"
homepage = "https://github.com/PabloLION/agent-console-dashboard"
documentation = "https://docs.rs/claude-usage"
readme = "README.md"
keywords = ["claude", "anthropic", "usage", "api", "oauth"]
categories = ["api-bindings", "authentication"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
napi = ["dep:napi", "dep:napi-derive"]

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
napi = { version = "2", optional = true }
napi-derive = { version = "2", optional = true }

[build-dependencies]
napi-build = "2"

[dev-dependencies]
tempfile = "3"
